@@ -137,4 +137,13 @@ void PoplarExecutable::copyWeightsToDevice() {
 const std::vector<OutputType> &PoplarExecutable::outputTypes() const {
   return _compiler.outputTypes();
 }
+
+std::string PoplarExecutable::getPopartIR() const {
+  std::unique_ptr<char> managed_ptr = _compiler.getPopartIR();
+  const char *raw_ptr = static_cast<const char *>(managed_ptr.get());
+
+  // Convert to std::string, copying again.
+  return raw_ptr;
+}
+
 } // namespace poptorch
