@@ -20,3 +20,5 @@ are passed into the model wrapper via |anchor_mode| options are Sum, All, Final 
 - Automatically synchronise the weights back to the Host after using the IPU for training. (i.e no need to explicitly call copyWeightsToHost() anymore)
 
 - Adds support for torch.nn.PReLU
+
+- Adds support for Adam optimizer.
